# webknossos-libs

./: .codespellrc  .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  Dockerfile  MANIFEST.in  Makefile  README.md  changelog_for_version.sh  circle.yml  config.ini  config.yml  config_segmentation.yml  cuber.py  dependabot.yml  make_changelog.py  make_release.sh  publish.sh  pyproject.toml  requirements.txt  setup.py  test.sh  typecheck.sh
cluster_tools/: .gitignore  .pylintrc  Changelog.md  Dockerfile  LICENSE  README.md  format.sh  lint.sh  pyproject.toml  setup.py  slurm_example.py  test.py  test.sh  test_kubernetes.py  typecheck.sh
cluster_tools/.circleci/: config.yml
cluster_tools/cluster_tools/: __init__.py  executor_protocol.py  file_formatters.py  multiprocessing_logging_handler.py  pickling.py  remote.py  slurm.py  tailf.py  util.py
cluster_tools/dockered-slurm/: Dockerfile  README.md  cgroup.conf  docker-compose.yml  how-to.md  pbs.conf  setup-pbs.sh  slurm.conf
cluster_tools/testdata/: Dockerfile  cluster-config.yaml
cluster_tools/tests/: Dockerfile  cluster-config.yaml  guardless_multiprocessing.py  test.py  test_all.py  test_batching.py  test_dask.py  test_deref_main.py  test_kubernetes.py  test_multiprocessing.py  test_slurm.py  tests.py
docs/: .gitignore  README.md  api.sh  generate.sh  generate_api_doc_pages.py  get_keyword_mapping.py  linkcheckerrc  mkdocs.yml  pyproject.toml
docs/md_extensions/: mdlightbox.py  pdoc_toc_extension.py  video_embed_extension.py
docs/overrides/: main.html
docs/pdoc_templates/: frame.html.jinja2  module.html.jinja2
docs/src/: webknossos
webknossos/: .gitignore  .test_durations  CLAUDE.md  Changelog.md  Dockerfile  README.md  __generate_client.py  convert_tiff.py  convert_tiff_delmic.py  convert_tiff_uint48.py  downsample-compress.py  export_edited_mapping.py  format.sh  generate_client.sh  info?timestamp=0  lint.sh  local_wk_setup.sh  mesh.md  precommit.sh  pyproject.toml  read-czi.py  test-raw-data.py  test.py  test.sh  test_tensorstore.sh  typecheck.sh  uploadtest.py
webknossos/examples/: accessing_metadata.py  add_existing_zarr_array.py  agglomerate_attachment.py  annotation_project_administration.py  announce_dataset_upload.py  apply_merger_mode.py  calculate_segment_sizes.py  consensus_segmentation.py  convert_4d_tiff.py  create_dataset_from_images.py  dataset_usage.py  download_image_data.py  download_segments.py  download_tiff_stack.py  explore_and_add_remote.py  image_list_to_wkw.py  image_stack_to_dataset.py  learned_segmenter.py  load_annotation_from_file.py  merge_trees_of_nml_files.py  move_dataset_slices_by_one.py  offline_merger_mode.py  publish_to_webknossos.py  remote_datasets.py  reserve_manual_dataset_upload.py  skeleton_path_length.py  skeleton_plot.py  skeleton_synapse_candidates.py  skeleton_synapse_canidates.py  task.py  teams_and_users.py  upload_dicom_stack.py  upload_image_data.py  upload_tiff_stack.py  upload_to_webknossos.py  upsample_skeleton.py  user_times.py  write_images_to_harddrive.py  zarr_and_dask.py
webknossos/script-collection/: globalize_floodfill.py  move_dataset_slices_by_one.py
webknossos/script_collection/: globalize_floodfill.py  move_dataset_slices_by_one.py  reading_nd_data.py  test_segmentation_heuristic.py  test_zarr.py  upsample_ds.py
webknossos/testdata/: .gitignore  test_ZCYX.tif
webknossos/tests/: conftest.py  constants.py  docker-compose.yml  test_annotation.py  test_api_client.py  test_bounding_box.py  test_buffered_slice_utils.py  test_buffered_slice_writer.py  test_cli.py  test_cli_utils.py  test_dataset.py  test_dataset_deprecated.py  test_dataset_download_upload.py  test_dataset_download_upload_remote.py  test_downsampling.py  test_examples.py  test_from_images.py  test_generated_client.py  test_mag.py  test_perf.py  test_remote_dataset.py  test_skeleton.py  test_tensorstore.py  test_upsampling.py  test_utils.py  test_vec3_int.py  test_zarr_dataset.py  utils.py  vcr_utils.py  wk-docker-compose.override.yml
webknossos/uploadtest-data/: datasource-properties.json
webknossos/webknossos/: __init__.py  _types.py  dev-example.py  ssl_context.py  utils.py  version.py
wkcuber/: .dockerignore  .gitignore  .pylintrc  Changelog.md  Dockerfile  README.md  SafeBoundingBox.py  __init__.py  __main__.py  check_equality.py  compress.py  config.py  convert.py  convert_image_stack_to_wkw.py  convert_knossos.py  convert_nifti.py  converter.py  cube_io.py  cubing.py  downsampling.py  downsampling_utils.py  export_wkw_as_nifti.py  export_wkw_as_tiff.py  format.sh  image_readers.py  knossos.py  lint.sh  mag.py  metadata.py  publish.sh  pyproject.toml  recubing.py  setup.cfg  stubs  test.sh  test_api.py  tile_cubing.py  typecheck.sh  upsampling.py  upsampling_utils.py  (+2 more)
wkcuber/api/: Dataset.py  Layer.py  MagDataset.py  Properties.py  Slice.py  View.py  __init__.py  bounding_box.py  converter.py  dataset.py  layer.py  mag_dataset.py  mag_view.py  properties.py  view.py
wkcuber/testdata/: rgb_tiff  simple_wkw_dataset  temca2  tiff  tiff_with_different_dimensions  various_tiff_formats
wkcuber/tests/: conftest.py  constants.py  test_auto_detection.py  test_cli.py  test_dataset.py  test_downsampling.py  test_export_wkw_as_nifti.py  test_export_wkw_as_tiff.py  test_image_readers.py  test_main.py  test_metadata.py  test_pad_or_crop.py  test_raw_conversion.py  test_upsampling.py  test_utils.py
wkcuber/wkcuber/: TODO  __init__.py  __main__.py  _utils.py  check_equality.py  compress.py  compress_utils.py  convert.py  convert_image_stack_to_wkw.py  convert_knossos.py  convert_nifti.py  convert_raw.py  convert_trak_em_volume.py  convert_zarr.py  converter.py  cubing.py  download.py  downsample.py  downsampling.py  downsampling_utils.py  export.py  export_wkw_as_nifti.py  export_wkw_as_tiff.py  image_readers.py  knossos.py  mag.py  main.py  metadata.py  recubing.py  tile_cubing.py  upload.py  upsample.py  upsampling.py  upsampling_utils.py  utils.py
wklib/: README.md  pyproject.toml  typecheck.sh
wklib/examples/: learned_segmenter.py  (+3 more)
(+1337 files in other folders)
