[tool.poetry]
name = "wkcuber"
version = "0.0.0" # filled by setuptools-scm
description = "A cubing tool for webKnossos"
authors = ["scalable minds <hello@scalableminds.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
scipy = "^1.4.0"
numpy = "^1.17.4"
pillow = "^6.2.1"
wkw = "0.1.4"
requests = "^2.22.0"
cluster_tools = "1.51"
natsort = "^6.2.0"
psutil = "^5.6.7"
nibabel = "^2.5.1"
scikit-image = "^0.16.2"

[tool.poetry.dev-dependencies]
pylint = "2.3.1"
black = "19.3b0"
pytest = "^5.3.2"
setuptools-scm = "^3.3.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
