[tool.poetry]
name = "wkcuber"
version = "0.0.0" # filled by setuptools-scm
description = "Python package to create, cube, and work with webKnossos WKW datasets"
authors = ["scalable minds <hello@scalableminds.com>"]
readme = "README.md"
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.6.0"
numpy = "1.19.5"
pillow = ">=6.2.1,<9.0.0"
wkw = "1.1.11"
requests = "^2.22.0"
cluster_tools = "^1.52"
natsort = "^6.2.0"
psutil = "^5.6.7"
nibabel = "^2.5.1"
scikit-image = "^0.18.0"
scikit-learn = "^0.24.0"
tifffile = "^2020.11.26"
imagecodecs = "^2020.5.30"
czifile = "^2019.7.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"
pytest = "^6.2.1"
setuptools-scm = "^3.3.3"
mypy = "^0.800"
pdoc = "^7.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
