[tool.poetry]
name = "wk-libs-docs"
description = "Documentation for webknossos-libs"
version = "0.0.1"
authors = ["scalable minds <hello@scalableminds.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# mkdocs-video is not ready for Py3.11 because of bugs in lxml lib https://github.com/getnikola/nikola/issues/3679
python = ">=3.9,<3.11"
mkdocs-glightbox = "^0.3.4"
mkdocstrings-python = "^1.10.8"
mkdocs-gen-files = "^0.5.0"

[tool.poetry.dev-dependencies]
LinkChecker = "^10.0.1"
mkdocs = "^1.4.3"
mkdocs-video = "^1.5.0"
mkdocs-material = "^9.1.16"
mkdocs-redirects = "^1.2.0"
webknossos = { path = "../webknossos/", develop = true}

[build-system]
requires = ["poetry-core>=1.1"]
build-backend = "poetry.masonry.api"
