[project]
name = "wk-libs-docs"
description = "Documentation for webknossos-libs"
version = "0.0.1"
authors = [{name= "scalable minds", email="hello@scalableminds.com"}]
readme = "README.md"
requires-python = ">=3.9,<3.13"

dependencies = [
    "webknossos",
    "mkdocs-glightbox ~=0.4.0",
    "mkdocstrings-python ~=1.12.1",
    "mkdocs-gen-files ~=0.5.0", 
    "mkdocs-redirects ~=1.2.0",
    "mkdocs-video ~=1.5.0",
    "mkdocs-material ~=9.5.32",
    "LinkChecker ~=10.0.1",
]

[tool.uv.sources]
webknossos = { path = "../webknossos"}
mkdocs-video = {branch="master", git="https://github.com/calmzhu/mkdocs-video.git"}

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

