[tool.poetry]
name = "wkcuber"
version = "0.0.0"  # filled by dunamai
description = "Python package to create, cube, and work with WEBKNOSSOS WKW datasets"
authors = ["scalable minds <hello@scalableminds.com>"]
readme = "README.md"
license = "AGPL-3.0"
repository = "https://github.com/scalableminds/webknossos-libs"
homepage = "https://docs.webknossos.org/wkcuber"

[tool.poetry.scripts]
wkcuber = "wkcuber.main:app"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
typer = {extras = ["all"], version = "^0.9.0"}
webknossos = { path = "../webknossos/", develop = true }

[tool.poetry.dev-dependencies]
black = "^23.1.0"
mypy = "1.0.0"
pylint = "^2.16.2"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
