[tool.poetry]
name = "wkcuber"
version = "0.0.0"  # filled by dunamai
description = "Deprecated wkcuber package, use webknossos instead."
authors = ["scalable minds <hello@scalableminds.com>"]
readme = "README.md"
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
webknossos = { path = "../webknossos/", develop = true }

[build-system]
requires = ["poetry.core>=1.0.0"]
build-backend = "poetry.core.masonry.api"