[tool.poetry]
name = "wklib"
version = "0.0.0"  # filled by setuptools-scm
description = "Python package to work with webKnossos datasets and annotations"
authors = ["scalable minds <hello@scalableminds.com>"]
readme = "README.md"
license = "AGPL-3.0"  # TODO

[tool.poetry.dependencies]
python = "^3.7"
scipy = "^1.4.0"
numpy = "^1.15.0"  # see https://numpy.org/neps/nep-0029-deprecation_policy.html#support-table
wkw = "1.1.11"
scikit-image = "^0.16.0"

[tool.poetry.dev-dependencies]
pylint = "^2.10.2"
black = "21.7b0"
pytest = "^6.2.4"
setuptools-scm = "^6.0.1"
mypy = "0.910"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
